test_outputs/connlist/exposure_test_with_anp_6_entire_cluster_example_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => hello-world/workload-a[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'hello-world/allow-app-a' selects hello-world/workload-a[Deployment], but 0.0.0.0-255.255.255.255[External] is not allowed by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'hello-world/allow-app-a' selects hello-world/workload-a[Deployment], but 0.0.0.0-255.255.255.255[External] is not allowed by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			AdminNetworkPolicy 'exposure-pass-with-entire-cluster-example' passes connections by Egress rule pass-tcp80-egress-to-entire-cluster
			NetworkPolicy 'hello-world/allow-app-a' allows connections by Egress rule #1
		Ingress (Allowed)
			AdminNetworkPolicy 'exposure-pass-with-entire-cluster-example' passes connections by Ingress rule pass-tcp80-ingress-from-entire-cluster
			the system default (Allow all)

	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'hello-world/allow-app-a' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-79,81-9089,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'hello-world/allow-app-a' selects hello-world/workload-a[Deployment], and Egress rule #1 selects hello-world/workload-b[Deployment], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP:[9090] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'hello-world/allow-app-a' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-79,81-9089,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'hello-world/allow-app-a' selects hello-world/workload-a[Deployment], and Ingress rule #1 selects hello-world/workload-b[Deployment], but the protocols and ports do not match

	Denied TCP:[80] due to the following policies and rules:
		Egress (Allowed)
			AdminNetworkPolicy 'exposure-pass-with-entire-cluster-example' passes connections by Egress rule pass-tcp80-egress-to-entire-cluster
			the system default (Allow all)
		Ingress (Denied)
			AdminNetworkPolicy 'exposure-pass-with-entire-cluster-example' passes connections by Ingress rule pass-tcp80-ingress-from-entire-cluster
			NetworkPolicy 'hello-world/allow-app-a' selects hello-world/workload-a[Deployment], and Ingress rule #1 selects hello-world/workload-b[Deployment], but the protocols and ports do not match


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External]

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	entire-cluster : TCP 80,9090
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	entire-cluster : TCP 9090
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections
